# REPO

./: FuncA.cpp  FuncA.h  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  funca  funca.1  funca.elf
.github/workflows/: build.yml  buildci.yml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
deb/usr/local/share/funca/: data.txt
